--- a/index.html
+++ b/index.html
@@ -4,17 +4,38 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Phone Hunter</title>
+    <script src="https://kit.fontawesome.com/e0908b3fdb.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
   <body class="container">
     <header>
-        <h1 class="my-5">All Your Favourite Phones Together</h1>
+      <h1 class="my-5">All Your Favourite Phones Together</h1>
     </header>
     <main>
         <section>
-            <h2 class="text-center">Search Your Phone</h2>
+          <h2 class="text-center">Search Your Phone</h2>
+          <div class="input-group my-3 w-50 mx-auto">
+            <input type="text" id="search-text" class="form-control" 
+            placeholder="Search Your Phone" aria-label="Recipient's username" aria-describedby="button-addon2">
+            <button class="btn btn-primary" type="button" id="search-btn">Search</button>
+          </div>
         </section>
+        <section id="spinner" class="d-none">
+          <div class="spinner-border text-primary position-absolute top-50 start-50" role="status">
+            <span class="visually-hidden">Loading...</span>
+          </div>
+        </section>
+        <section id="error-box" class=" text-center my-5">
+
+        </section>
+        <section>
+            <div id="phones-container" class="row row-cols-1 row-cols-md-3 g-4">
+              
+            </div>
+        </section>
+
     </main>
+    <script src="js/app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
