--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body class="container">
     <header>
-      <h1 class="my-5">All Your Favourite Phones Together</h1>
+      <h1 class="my-5 text-center">All Your Favourite Phones Together</h1>
     </header>
     <main>
         <section>
@@ -29,11 +29,13 @@
 
         </section>
         <section>
-            <div id="phones-container" class="row row-cols-1 row-cols-md-3 g-4">
+            <div id="phones-container" class="row row-cols-1 row-cols-md-3 g-4 my-3">
               
             </div>
         </section>
-
+        <section id="show-all-container" class="d-none d-flex justify-content-center my-5">
+          <button id="show-all" class="btn btn-primary">Show all</button>
+        </section>
     </main>
     <script src="js/app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
