--- a/index.html
+++ b/index.html
@@ -33,6 +33,25 @@
               
             </div>
         </section>
+        <section>
+          <!-- Modal -->
+          <div class="modal fade" id="phoneDetailModal" tabindex="-1" aria-labelledby="phoneDetailModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h1 class="modal-title fs-5" id="phoneDetailModalLabel"></h1>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div id="modal-body" class="modal-body">
+                  
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
         <section id="show-all-container" class="d-none d-flex justify-content-center my-5">
           <button id="show-all" class="btn btn-primary">Show all</button>
         </section>
